feat(COM): Initialize banking microservices project structure